cleaning up loose ends

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "html-index",
   "version": "0.0.1",
-  "description": "A command-line tool for creating simple index.html lists in a directory tree.",
+  "description": "Recursively write simple index.html lists in a directory tree.",
   "main": "index.js",
   "repository": {
     "type": "git",
